--- a/notebooks/nb_92_MinariOverview.ipynb
+++ b/notebooks/nb_92_MinariOverview.ipynb
@@ -6,11 +6,11 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%matplotlib inline\n",
-    "%load_ext training_rl"
+    "%load_ext training_rl\n",
+    "%set_random_seed 12"
    ],
    "metadata": {
     "collapsed": false
@@ -19,177 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>/*\n",
-       "This file is mainly copy-pasta from rise's examples\n",
-       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
-       "that was further customized for appliedAI purposes\n",
-       "*/\n",
-       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
-       "\n",
-       "\n",
-       "/*\n",
-       "body {\n",
-       "    font-family: 'Work Sans', sans-serif !important;\n",
-       "    text-transform: initial !important;\n",
-       "    letter-spacing: initial !important;\n",
-       "    font-weight: 400 !important;\n",
-       "    line-height: 1.5 !important;\n",
-       "    text-size-adjust: 100% !important;\n",
-       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
-       "}\n",
-       "\n",
-       "\n",
-       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
-       "    font-size: 1.5rem !important;\n",
-       "}\n",
-       "*/\n",
-       "\n",
-       ".navbar-default .navbar-nav > li > a {\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       ".filename {\n",
-       "    font-size: 2.4rem !important;\n",
-       "    color: #212529 !important;\n",
-       "    font-weight: 600 !important;\n",
-       "}\n",
-       "\n",
-       ".reveal, .md-slide {\n",
-       "    color: white !important;\n",
-       "}\n",
-       "\n",
-       "h1, h2 {\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       "h3, h4, h5, h6 {\n",
-       "    color: #808080 !important;\n",
-       "}\n",
-       "\n",
-       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
-       "div.text_cell_render {\n",
-       "    color: #212529 !important;\n",
-       "}\n",
-       "\n",
-       "/*copied from stackoverflow, better spacing between list items*/\n",
-       "li + li {\n",
-       "  margin-top: 0.2em;\n",
-       "}\n",
-       "\n",
-       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
-       "    margin-left: 0.1em;\n",
-       "    margin-top: 0.2em;\n",
-       "}\n",
-       "\n",
-       ".reveal .rendered_html h1:first-child,\n",
-       ".reveal .rendered_html h2:first-child,\n",
-       ".reveal .rendered_html h3:first-child,\n",
-       ".reveal .rendered_html h4:first-child,\n",
-       ".reveal .rendered_html h5:first-child {\n",
-       "    margin-top: 0.2em;\n",
-       "}\n",
-       "\n",
-       "/*\n",
-       ".CodeMirror-lines, .output_text {\n",
-       "    font-size: 1.5rem !important;\n",
-       "}\n",
-       "*/\n",
-       "\n",
-       "h1.plan, h2.plan, h3.plan {\n",
-       "    text-align: center;\n",
-       "    padding-bottom: 30px;\n",
-       "}\n",
-       "\n",
-       "ul.plan>li>span.plan-bold {\n",
-       "    font-size: 110%;\n",
-       "    padding: 4px;\n",
-       "    font-weight: bold;\n",
-       "    background-color: #eee;\n",
-       "}\n",
-       "\n",
-       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
-       "    font-weight: bold;\n",
-       "}\n",
-       "\n",
-       ".plan-strike {\n",
-       "    opacity: 0.4;\n",
-       "/*    text-decoration: line-through; */\n",
-       "}\n",
-       "\n",
-       "div.plan-container {\n",
-       "    display: grid;\n",
-       "    grid-template-columns: 50% 50%;\n",
-       "}\n",
-       "\n",
-       "/*\n",
-       " * this is to void xarray's html output to show the fallback textual representation\n",
-       " * see also\n",
-       "   * xarray.md and\n",
-       "   * https://github.com/damianavila/RISE/issues/594\n",
-       " */\n",
-       ".reveal pre.xr-text-repr-fallback {\n",
-       "    display: none;\n",
-       "}\n",
-       "\n",
-       "#toc-header, .toc-item li {\n",
-       "    margin: auto !important;\n",
-       "    color: #808080 !important;\n",
-       "}\n",
-       "\n",
-       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
-       "    margin: auto !important;\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       "#toc-wrapper {\n",
-       "    top: auto !important;\n",
-       "    bottom: auto !important;\n",
-       "    margin-top: 2rem !important;\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       "\n",
-       "#rise-header {\n",
-       "    margin: 10px;\n",
-       "    left: 5%;\n",
-       "}\n",
-       "\n",
-       "#rise-footer {\n",
-       "    margin: 10px;\n",
-       "    right: 5%;\n",
-       "}\n",
-       "\n",
-       "#rise-backimage {\n",
-       "    opacity: 0.70;\n",
-       "}\n",
-       "\n",
-       ".reveal img {\n",
-       "    max-width: 100%;\n",
-       "}\n",
-       "\n",
-       "\n",
-       ".md-slide.title {\n",
-       "    position: relative;\n",
-       "    top: -50%;\n",
-       "    margin-left: 5%;\n",
-       "    font-size: 4em !important;\n",
-       "    line-height: 1.6;\n",
-       "}\n",
-       "</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%presentation_style"
    ],
@@ -202,42 +32,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "\n",
-    "%set_random_seed 12"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "\n",
-       "$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n",
-       "$\\newcommand{\\amax}{{\\text{argmax}}}$\n",
-       "$\\newcommand{\\P}{{\\mathbb{P}}}$\n",
-       "$\\newcommand{\\E}{{\\mathbb{E}}}$\n",
-       "$\\newcommand{\\R}{{\\mathbb{R}}}$\n",
-       "$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n",
-       "$\\newcommand{\\N}{{\\mathbb{N}}}$\n",
-       "$\\newcommand{\\C}{{\\mathbb{C}}}$\n",
-       "$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n",
-       "$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
     "%load_latex_macros"
    ],
    "metadata": {
@@ -247,36 +41,106 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "from training_rl.offline_rl.custom_envs.custom_envs_registration import register_grid_envs\n",
-    "import warnings\n",
-    "from training_rl.offline_rl.load_env_variables import load_env_variables\n",
-    "import gymnasium as gym\n",
-    "from training_rl.offline_rl.utils import one_hot_to_integer\n",
-    "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.simple_grid import Custom2DGridEnv\n",
-    "import numpy as np\n",
-    "from scripts.visualizations.utils import snapshot_env\n",
-    "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.obstacles_2D_grid_register import ObstacleTypes\n",
-    "from training_rl.offline_rl.custom_envs.utils import Grid2DInitialConfig, InitialConfigCustom2DGridEnvWrapper\n",
-    "from training_rl.offline_rl.custom_envs.custom_envs_registration import CustomEnv, RenderMode\n",
-    "from training_rl.offline_rl.offline_policies.offpolicy_rendering import offpolicy_rendering\n",
+    "import os\n",
+    "%autoreload\n",
     "import random\n",
-    "import minari\n",
-    "from minari import StepDataCallback, DataCollectorV0\n",
-    "from training_rl.offline_rl.utils import delete_minari_data_if_exists\n",
-    "from training_rl.offline_rl.generate_custom_minari_datasets.utils import generate_compatible_minari_dataset_name\n",
-    "from scripts.visualizations.utils import get_state_action_data_and_policy_grid_distributions\n",
-    "from training_rl.offline_rl.utils import load_buffer_minari, state_action_histogram\n",
+    "import warnings\n",
     "\n",
+    "import gymnasium as gym\n",
+    "import minari\n",
+    "import numpy as np\n",
+    "from minari import DataCollectorV0, StepDataCallback\n",
+    "\n",
+    "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.obstacles_2D_grid_register import \\\n",
+    "    ObstacleTypes\n",
+    "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.simple_grid import \\\n",
+    "    Custom2DGridEnv\n",
+    "from training_rl.offline_rl.custom_envs.custom_envs_registration import (\n",
+    "    CustomEnv, RenderMode, register_grid_envs)\n",
+    "from training_rl.offline_rl.custom_envs.utils import (\n",
+    "    Grid2DInitialConfig, InitialConfigCustom2DGridEnvWrapper)\n",
+    "from training_rl.offline_rl.generate_custom_minari_datasets.utils import \\\n",
+    "    generate_compatible_minari_dataset_name\n",
+    "from training_rl.offline_rl.load_env_variables import load_env_variables\n",
+    "from training_rl.offline_rl.offline_policies.offpolicy_rendering import \\\n",
+    "    offpolicy_rendering\n",
+    "from training_rl.offline_rl.utils import (delete_minari_data_if_exists,\n",
+    "                                          load_buffer_minari,\n",
+    "                                          one_hot_to_integer,\n",
+    "                                          state_action_histogram)\n",
+    "from training_rl.offline_rl.visualizations.utils import (\n",
+    "    get_state_action_data_and_policy_grid_distributions, snapshot_env)\n",
     "\n",
     "load_env_variables()\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "# To get access to the registered environments.\n",
-    "register_grid_envs()"
-   ]
+    "register_grid_envs()\n",
+    "\n",
+    "render_mode = RenderMode.RGB_ARRAY_LIST if os.environ.get(\"DISPLAY\") else None"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<div class=\"md-slide title\"> Minari Overview </div>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Minari overview\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "Unfortunately not supported in windows (maybe mainly because of Mujoco dependency)\n",
+    "\n",
+    "1 - **[Intro Minari](https://minari.farama.org/main/content/basic_usage/)**\n",
+    "\n",
+    "Can be used to collect data given a gymnasium environment:\n",
+    "\n",
+    "    from minari import DataCollectorV0\n",
+    "    import gymnasium as gym\n",
+    "\n",
+    "    env = gym.make('LunarLander-v2')\n",
+    "    env = DataCollectorV0(env, record_infos=True, max_buffer_steps=10000)\n",
+    "\n",
+    "\n",
+    "Has different functionalities like to add useful metadata to the datasets, fuse data coming from different behavioral policies, custom preprocessing of the collected (observation, action, reward) data, add new data to existing datasets, restore the environments associated with your data, etc. We will use some of these functionalities in our exercises.\n",
+    "\n",
+    "However, is not a very robust library so in the possible it is better to have your own functions to restore your environment, load metadata, etc. And rely on Minari as little as possible. We will see that in the notebook exercises.\n",
+    "\n",
+    "\n",
+    "Of course one of its main use is to Download the very useful datasets available online as well as to have access to the policies used to generate them: [datasets](https://minari.farama.org/main/datasets/pen/human/)\n",
+    "\n",
+    "\n",
+    "Many interesting datasets uses the Mujoco C/C++ library.\n",
+    "\n",
+    "2 - **[Mujoco](https://github.com/google-deepmind/mujoco)**\n",
+    "\n",
+    "MuJoCo, short for Multi-Joint dynamics with Contact, is a versatile physics engine designed to support research and development across various fields, including robotics, bio-mechanics, graphics, animation, machine learning, and more. Originally created by Robotic LLC, it was later acquired by DeepMind and made freely accessible to the public in October 2021. Furthermore, it was open-sourced in May 2022."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Exercise I"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -293,7 +157,7 @@
     "\n",
     "**Notation:**\n",
     "\n",
-    "In our grid world environment, the agent's position is represented as $(x_1, x_2)$, where $x_1$ corresponds to the vertical coordinate, and $x_2 corresponds to the horizontal coordinate. Additionally, we've placed obstacles within the environment to increase the task's complexity.\n",
+    "In our grid world environment, the agent's position is represented as $(x_1, x_2)$, where $x_1$ corresponds to the vertical coordinate, and $x_2$ corresponds to the horizontal coordinate. Additionally, we've placed obstacles within the environment to increase the task's complexity.\n",
     "\n",
     "Observations are represented as a 64-dimensional vector since we are working with a 8x8 grid. All vector elements are set to zero, except for the position where the agent is located, which is set to one.\n",
     "\n",
@@ -315,8 +179,6 @@
    "source": [
     "# We have different 2-d grid environments registered.\n",
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
-    "RENDER_MODE = RenderMode.RGB_ARRAY_LIST\n",
-    "\n",
     "\n",
     "# Configure the environment initial conditions. We also have different obstacles registered\n",
     "# in ObstacleTypes. \n",
@@ -327,7 +189,7 @@
     ")\n",
     "\n",
     "env = InitialConfigCustom2DGridEnvWrapper(\n",
-    "    gym.make(ENV_NAME, render_mode=RENDER_MODE),\n",
+    "    gym.make(ENV_NAME, render_mode=render_mode),\n",
     "    env_config=env_2d_grid_initial_config\n",
     ")\n",
     "\n",
@@ -337,9 +199,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Exercise 1:"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -366,12 +226,12 @@
     "2 - Incorporate stochastic movement with a restriction of not traversing more than 5 cells \n",
     "    vertically while introducing a bias towards the right direction to make it suboptimal.\n",
     "    \n",
-    "Hint: To ensure that everything is working correctly, you can visualize the policy using the **behavior_policy_rendering(...)** function:\n",
+    "Hint: To ensure that everything is working correctly, you can visualize the policy using the **offpolicy_rendering(...)** function:\n",
     "\n",
-    "    behavior_policy_rendering(\n",
+    "    offpolicy_rendering(\n",
     "        env_or_env_name=ENV_NAME,\n",
-    "        render_mode=RENDER_MODE,\n",
-    "        behavior_policy= behavior_suboptimal_policy,\n",
+    "        render_mode=render_mode,\n",
+    "        policy_model= behavior_suboptimal_policy,\n",
     "        env_2d_grid_initial_config=env_2d_grid_initial_config,\n",
     "        num_frames=1000,\n",
     "    )"
@@ -408,7 +268,7 @@
     "\n",
     "offpolicy_rendering(\n",
     "    env_or_env_name=ENV_NAME,\n",
-    "    render_mode=RENDER_MODE,\n",
+    "    render_mode=render_mode,\n",
     "    policy_model= behavior_suboptimal_policy,\n",
     "    env_2d_grid_initial_config=env_2d_grid_initial_config,\n",
     "    num_frames=1000,\n",
@@ -428,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**EXERCISE 2:**"
+    "## Exercise II"
    ]
   },
   {
@@ -444,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SOLUTION:"
+    "**SOLUTION:**"
    ]
   },
   {
